Fixed field spacing

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -49,7 +49,7 @@ fieldset {
 
 	.field {
 		flex: 1 0 0;
-		margin: 0.3125em;
+		margin: @control-gutter;
 
 		&.fit {
 			flex: 0 0 auto;
